Handles separate pom / jar files.